# retro-dreamer

./: .gitignore  pyproject.toml  run.py
backend/: action_manifest.py  catalog.py  copilot.py  copilot_primer.md  episode_report.py  live_server.py  server.py  storage.py  studio_state.py  tools.py  watch_brain_job.py
backend/api/: routes.py  ws.py
docs/: bugfix-sweep-20260714.md  copilot-analysis-jim.md  copilot-central-driver-options-jim.md  copilot-grounding-e-proposal.md  copilot-inventory-pam.md  copilot-patterns-dwight.md  episode-report-hardening-results.md  episode-report-hardening.md  grounding-e-adversarial-dwight.md  grounding-e-redteam-dwight.md  hidden-bug-audit.md  lm-done-condition-verification.md  pam-capability-profile.md  pam-capability-test.md  pam-engine-test-scoring.md  pam-engine-test.md  pam-vision-dryrun.md  pam-vision-test.md  phase4-studio-integration-spec.md  sheeprl-patches.md  studio-v2-as-built.md  vision-association-diagnosis.md  vision-fix-test.md  vision-fix-test2.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
scripts/: integration_ui.sh  overnight_watchdog.py  rebuild_tb_view.py
sheeprl/: QUADRATIC_SPEED_REWARD_GUIDE.md  _retro_build_state.py  _retro_eval.py  _retro_gp_probe.py  _retro_live_player.py  _retro_make_state.py  _retro_ram_capture.py  _retro_ram_diff.py  _retro_record.py  _retro_tool_probe.py  _retro_walker.py  _retro_watch.py  generate_missing_videos.sh  resume_training copy.sh  resume_training.sh
(+157 files in other folders)
