[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retro-dreamer"
version = "0.1.0"
description = "Self-contained DreamerV3 training studio for any gym-retro ROM"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "stable-retro",
    "torch>=2.0",
    "lightning",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "tensorboard",
    "imageio",
    "imageio-ffmpeg",
    "opencv-python-headless",
    "numpy",
    "gymnasium",
    "pyyaml",
    "torchmetrics",
    "rich",
]

[project.scripts]
retro-dreamer = "backend.server:main"

[tool.setuptools.packages.find]
include = ["backend*"]
